--- a/index.html
+++ b/index.html
@@ -76,15 +76,18 @@
                 <h2>Linux</h2>
             </summary>
             <details>
-                
+
                 <summary>
                     <hr>
                     <h2>Ubuntu</h2>
                 </summary>
-                <p>Вероятнее всего, Python у Вас уже есть по умолчанию, но если это не так, то Вам нужно проосто открыть терминал <code>ctrl+alt+t</code></p>
-                <p>Написать <code>sudo apt update && sudo apt upgrade -y</code></p>
-                <p>После чего ещё <code>sudo apt install python3 -y</code></p>
-                <p>После установки нужно написать <code>python3 --version</code> (проверка версии питона)</p>
+                <div class="construct">
+                    <p>Вероятнее всего, Python у Вас уже есть по умолчанию, но если это не так, то Вам нужно проосто
+                        открыть терминал <code>ctrl+alt+t</code></p>
+                    <p>Написать <code>sudo apt update && sudo apt upgrade -y</code></p>
+                    <p>После чего ещё <code>sudo apt install python3 -y</code></p>
+                    <p>После установки нужно написать <code>python3 --version</code> (проверка версии питона)</p>
+                </div>
             </details>
         </details>
     </div>
